--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Recipe page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,62 +16,90 @@
 </head>
 <body>
 
-  Simple Omelette Recipe
+  <main class="wrapper">
+    <div class="recipe-wrapper">
+      <img src="assets/images/image-omelette.jpeg" alt="omelette" class="omelette-image">
+      <article class="recipe-container">
+        <h1 class="recipe-title">Simple Omelette Recipe</h1>
+        <p class="description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+        <aside class="prep-time">
+          <h3>Preparation time</h3>
+          <ul class="prep-list">
+            <li><strong>Total</strong>: Approximately 10 minutes</li>
+            <li><strong>Preparation</strong>: 5 minutes</li>
+            <li><strong>Cooking</strong>: 5 minutes</li>
+          </ul>
+        </aside>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        <section class="recipe-ingredients">
+          <h2> Ingredients</h2>
+          <ul class="ingredient-list">
+            <li>2-3 large eggs</li>
+            <li>Salt, to taste</li>
+            <li>Pepper, to taste</li>
+            <li>1 tablespoon of butter or oil</li>
+            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+          </ul>
+        </section>
 
-  Preparation time
+        <hr>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+        <section class="recipe-instructions">
+          <h2>Instructions</h2>
 
-  Ingredients
+          <ol class="instructions-list">
+            <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+            You can add a tablespoon of water or milk for a fluffier texture.</li>
+            <li><strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+            <li><strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+            the eggs evenly coat the surface.</li>
+            <li><strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly runny in the
+            middle, sprinkle your chosen fillings over one half of the omelette.</li>
+            <li><strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over the
+            fillings. Let it cook for another minute, then slide it onto a plate.</li>
+            <li><strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.</li>
+          </ol>
+        </section>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        <hr>
 
-  Instructions
+        <section class="nutritional-table">
+          <h2>Nutrition</h2>
+          <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
+          <table>
+            <tr>
+              <td data-cell="nutrient">Calories</td>
+              <td data-cell="nutrient-value">277kcal</td>
+            </tr>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+            <tr>
+              <td data-cell="nutrient">Carbs</td>
+              <td data-cell="nutrient-value"> 0g</td>
+            </tr>
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
+            <tr>
+              <td data-cell="nutrient">Protein</td>
+              <td data-cell="nutrient-value">20g</td>
+            </tr>
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
+            <tr>
+              <td data-cell="nutrient">Fat</td>
+              <td data-cell="nutrient-value">22g</td>
+            </tr>
+          </table>
+        </section>
+      </article>
+    </div>
+  </main>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
 </html>
